CI/A1/output/MiniP_2Parser.java
// $ANTLR 3.4 C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g 2014-03-29 14:45:33

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class MiniP_2Parser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BEGIN", "BOOL", "COMMA", "COMMENT", "DEF", "DIGIT", "END", "ESC_SEQ", "EXPONENT", "FLOAT", "HEX_DIGIT", "ID", "INT", "LETTER", "OCTAL_ESC", "PROGRAM", "PUNKT_OP", "RELOP", "SEMICOL", "STRICH_OP", "STRING", "TYPE", "UNICODE_ESC", "WS", "'('", "')'", "'do'", "'else'", "'fi'", "'if'", "'od'", "'print'", "'println'", "'read('", "'then'", "'while'"
    };

    public static final int EOF=-1;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int BEGIN=4;
    public static final int BOOL=5;
    public static final int COMMA=6;
    public static final int COMMENT=7;
    public static final int DEF=8;
    public static final int DIGIT=9;
    public static final int END=10;
    public static final int ESC_SEQ=11;
    public static final int EXPONENT=12;
    public static final int FLOAT=13;
    public static final int HEX_DIGIT=14;
    public static final int ID=15;
    public static final int INT=16;
    public static final int LETTER=17;
    public static final int OCTAL_ESC=18;
    public static final int PROGRAM=19;
    public static final int PUNKT_OP=20;
    public static final int RELOP=21;
    public static final int SEMICOL=22;
    public static final int STRICH_OP=23;
    public static final int STRING=24;
    public static final int TYPE=25;
    public static final int UNICODE_ESC=26;
    public static final int WS=27;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "numberconst", "var_def", "statements", "whileStmt", 
    "product", "ar_exp", "declaration", "statement", "main", "ar_term", 
    "ifStmt", "io_stmt", "expression", "ids", "cmp"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public MiniP_2Parser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public MiniP_2Parser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public MiniP_2Parser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return MiniP_2Parser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g"; }



    // $ANTLR start "main"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:3:1: main : PROGRAM ( declaration )+ BEGIN statements END ;
    public final void main() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "main");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(3, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:3:7: ( PROGRAM ( declaration )+ BEGIN statements END )
            dbg.enterAlt(1);

            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:3:9: PROGRAM ( declaration )+ BEGIN statements END
            {
            dbg.location(3,9);
            match(input,PROGRAM,FOLLOW_PROGRAM_in_main11); 
            dbg.location(3,17);
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:3:17: ( declaration )+
            int cnt1=0;
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==TYPE) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:3:17: declaration
            	    {
            	    dbg.location(3,17);
            	    pushFollow(FOLLOW_declaration_in_main13);
            	    declaration();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt1++;
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(3,30);
            match(input,BEGIN,FOLLOW_BEGIN_in_main16); 
            dbg.location(3,36);
            pushFollow(FOLLOW_statements_in_main18);
            statements();

            state._fsp--;

            dbg.location(3,47);
            match(input,END,FOLLOW_END_in_main20); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(4, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "main");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "main"



    // $ANTLR start "declaration"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:6:1: declaration : TYPE ids SEMICOL ;
    public final void declaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(6, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:7:2: ( TYPE ids SEMICOL )
            dbg.enterAlt(1);

            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:7:4: TYPE ids SEMICOL
            {
            dbg.location(7,4);
            match(input,TYPE,FOLLOW_TYPE_in_declaration32); 
            dbg.location(7,9);
            pushFollow(FOLLOW_ids_in_declaration34);
            ids();

            state._fsp--;

            dbg.location(7,13);
            match(input,SEMICOL,FOLLOW_SEMICOL_in_declaration36); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(8, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declaration"



    // $ANTLR start "ids"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:10:1: ids : ID ( COMMA ID )* ;
    public final void ids() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "ids");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(10, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:10:6: ( ID ( COMMA ID )* )
            dbg.enterAlt(1);

            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:10:8: ID ( COMMA ID )*
            {
            dbg.location(10,8);
            match(input,ID,FOLLOW_ID_in_ids47); 
            dbg.location(10,12);
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:10:12: ( COMMA ID )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==COMMA) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:10:13: COMMA ID
            	    {
            	    dbg.location(10,13);
            	    match(input,COMMA,FOLLOW_COMMA_in_ids51); 
            	    dbg.location(10,19);
            	    match(input,ID,FOLLOW_ID_in_ids53); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(11, 0);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "ids");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "ids"



    // $ANTLR start "var_def"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:13:1: var_def : ID DEF expression ;
    public final void var_def() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "var_def");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(13, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:13:9: ( ID DEF expression )
            dbg.enterAlt(1);

            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:13:11: ID DEF expression
            {
            dbg.location(13,11);
            match(input,ID,FOLLOW_ID_in_var_def64); 
            dbg.location(13,14);
            match(input,DEF,FOLLOW_DEF_in_var_def66); 
            dbg.location(13,18);
            pushFollow(FOLLOW_expression_in_var_def68);
            expression();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(14, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "var_def");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "var_def"



    // $ANTLR start "expression"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:16:1: expression : ( BOOL | STRING | ar_exp );
    public final void expression() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "expression");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(16, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:16:12: ( BOOL | STRING | ar_exp )
            int alt3=3;
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            switch ( input.LA(1) ) {
            case BOOL:
                {
                alt3=1;
                }
                break;
            case STRING:
                {
                alt3=2;
                }
                break;
            case FLOAT:
            case ID:
            case INT:
            case 28:
                {
                alt3=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:16:15: BOOL
                    {
                    dbg.location(16,15);
                    match(input,BOOL,FOLLOW_BOOL_in_expression79); 

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:16:22: STRING
                    {
                    dbg.location(16,22);
                    match(input,STRING,FOLLOW_STRING_in_expression83); 

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:16:31: ar_exp
                    {
                    dbg.location(16,31);
                    pushFollow(FOLLOW_ar_exp_in_expression87);
                    ar_exp();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(17, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "expression");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "expression"



    // $ANTLR start "ar_exp"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:22:1: ar_exp : product ( STRICH_OP product )* ;
    public final void ar_exp() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "ar_exp");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(22, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:23:2: ( product ( STRICH_OP product )* )
            dbg.enterAlt(1);

            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:23:5: product ( STRICH_OP product )*
            {
            dbg.location(23,5);
            pushFollow(FOLLOW_product_in_ar_exp112);
            product();

            state._fsp--;

            dbg.location(23,13);
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:23:13: ( STRICH_OP product )*
            try { dbg.enterSubRule(4);

            loop4:
            do {
                int alt4=2;
                try { dbg.enterDecision(4, decisionCanBacktrack[4]);

                int LA4_0 = input.LA(1);

                if ( (LA4_0==STRICH_OP) ) {
                    alt4=1;
                }


                } finally {dbg.exitDecision(4);}

                switch (alt4) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:23:14: STRICH_OP product
            	    {
            	    dbg.location(23,14);
            	    match(input,STRICH_OP,FOLLOW_STRICH_OP_in_ar_exp115); 
            	    dbg.location(23,24);
            	    pushFollow(FOLLOW_product_in_ar_exp117);
            	    product();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);
            } finally {dbg.exitSubRule(4);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(24, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "ar_exp");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "ar_exp"



    // $ANTLR start "product"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:26:1: product : ar_term ( PUNKT_OP ar_term )* ;
    public final void product() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "product");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(26, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:26:9: ( ar_term ( PUNKT_OP ar_term )* )
            dbg.enterAlt(1);

            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:26:11: ar_term ( PUNKT_OP ar_term )*
            {
            dbg.location(26,11);
            pushFollow(FOLLOW_ar_term_in_product130);
            ar_term();

            state._fsp--;

            dbg.location(26,19);
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:26:19: ( PUNKT_OP ar_term )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                int LA5_0 = input.LA(1);

                if ( (LA5_0==PUNKT_OP) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:26:20: PUNKT_OP ar_term
            	    {
            	    dbg.location(26,20);
            	    match(input,PUNKT_OP,FOLLOW_PUNKT_OP_in_product133); 
            	    dbg.location(26,29);
            	    pushFollow(FOLLOW_ar_term_in_product135);
            	    ar_term();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(27, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "product");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "product"



    // $ANTLR start "ar_term"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:29:1: ar_term : ( ID | numberconst | '(' ar_exp ')' );
    public final void ar_term() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "ar_term");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(29, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:29:9: ( ID | numberconst | '(' ar_exp ')' )
            int alt6=3;
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            switch ( input.LA(1) ) {
            case ID:
                {
                alt6=1;
                }
                break;
            case FLOAT:
            case INT:
                {
                alt6=2;
                }
                break;
            case 28:
                {
                alt6=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:29:11: ID
                    {
                    dbg.location(29,11);
                    match(input,ID,FOLLOW_ID_in_ar_term147); 

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:29:17: numberconst
                    {
                    dbg.location(29,17);
                    pushFollow(FOLLOW_numberconst_in_ar_term152);
                    numberconst();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:29:31: '(' ar_exp ')'
                    {
                    dbg.location(29,31);
                    match(input,28,FOLLOW_28_in_ar_term156); 
                    dbg.location(29,35);
                    pushFollow(FOLLOW_ar_exp_in_ar_term158);
                    ar_exp();

                    state._fsp--;

                    dbg.location(29,42);
                    match(input,29,FOLLOW_29_in_ar_term160); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(30, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "ar_term");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "ar_term"



    // $ANTLR start "cmp"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:32:1: cmp : ar_exp RELOP ar_exp ;
    public final void cmp() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "cmp");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(32, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:32:5: ( ar_exp RELOP ar_exp )
            dbg.enterAlt(1);

            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:32:7: ar_exp RELOP ar_exp
            {
            dbg.location(32,7);
            pushFollow(FOLLOW_ar_exp_in_cmp170);
            ar_exp();

            state._fsp--;

            dbg.location(32,14);
            match(input,RELOP,FOLLOW_RELOP_in_cmp172); 
            dbg.location(32,20);
            pushFollow(FOLLOW_ar_exp_in_cmp174);
            ar_exp();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(33, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "cmp");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "cmp"



    // $ANTLR start "ifStmt"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:35:1: ifStmt : 'if' ( BOOL | cmp ) 'then' statements ( 'else' statements )? 'fi' ;
    public final void ifStmt() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "ifStmt");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(35, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:35:8: ( 'if' ( BOOL | cmp ) 'then' statements ( 'else' statements )? 'fi' )
            dbg.enterAlt(1);

            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:35:10: 'if' ( BOOL | cmp ) 'then' statements ( 'else' statements )? 'fi'
            {
            dbg.location(35,10);
            match(input,33,FOLLOW_33_in_ifStmt184); 
            dbg.location(35,15);
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:35:15: ( BOOL | cmp )
            int alt7=2;
            try { dbg.enterSubRule(7);
            try { dbg.enterDecision(7, decisionCanBacktrack[7]);

            int LA7_0 = input.LA(1);

            if ( (LA7_0==BOOL) ) {
                alt7=1;
            }
            else if ( (LA7_0==FLOAT||(LA7_0 >= ID && LA7_0 <= INT)||LA7_0==28) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(7);}

            switch (alt7) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:35:16: BOOL
                    {
                    dbg.location(35,16);
                    match(input,BOOL,FOLLOW_BOOL_in_ifStmt187); 

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:35:23: cmp
                    {
                    dbg.location(35,23);
                    pushFollow(FOLLOW_cmp_in_ifStmt191);
                    cmp();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(7);}

            dbg.location(35,29);
            match(input,38,FOLLOW_38_in_ifStmt195); 
            dbg.location(35,36);
            pushFollow(FOLLOW_statements_in_ifStmt197);
            statements();

            state._fsp--;

            dbg.location(35,47);
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:35:47: ( 'else' statements )?
            int alt8=2;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8, decisionCanBacktrack[8]);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==31) ) {
                alt8=1;
            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:35:48: 'else' statements
                    {
                    dbg.location(35,48);
                    match(input,31,FOLLOW_31_in_ifStmt200); 
                    dbg.location(35,55);
                    pushFollow(FOLLOW_statements_in_ifStmt202);
                    statements();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(8);}

            dbg.location(35,68);
            match(input,32,FOLLOW_32_in_ifStmt206); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(36, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "ifStmt");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "ifStmt"



    // $ANTLR start "statement"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:38:1: statement : ( var_def | ifStmt | whileStmt | io_stmt );
    public final void statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(38, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:39:2: ( var_def | ifStmt | whileStmt | io_stmt )
            int alt9=4;
            try { dbg.enterDecision(9, decisionCanBacktrack[9]);

            switch ( input.LA(1) ) {
            case ID:
                {
                alt9=1;
                }
                break;
            case 33:
                {
                alt9=2;
                }
                break;
            case 39:
                {
                alt9=3;
                }
                break;
            case 35:
            case 36:
            case 37:
                {
                alt9=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:39:4: var_def
                    {
                    dbg.location(39,4);
                    pushFollow(FOLLOW_var_def_in_statement217);
                    var_def();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:40:10: ifStmt
                    {
                    dbg.location(40,10);
                    pushFollow(FOLLOW_ifStmt_in_statement228);
                    ifStmt();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:41:4: whileStmt
                    {
                    dbg.location(41,4);
                    pushFollow(FOLLOW_whileStmt_in_statement233);
                    whileStmt();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:42:5: io_stmt
                    {
                    dbg.location(42,5);
                    pushFollow(FOLLOW_io_stmt_in_statement239);
                    io_stmt();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(43, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "statement"



    // $ANTLR start "statements"
    // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:45:1: statements : statement ( SEMICOL ( statements )* )? ;
    public final void statements() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statements");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(45, 0);

        try {
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:46:2: ( statement ( SEMICOL ( statements )* )? )
            dbg.enterAlt(1);

            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:46:4: statement ( SEMICOL ( statements )* )?
            {
            dbg.location(46,4);
            pushFollow(FOLLOW_statement_in_statements250);
            statement();

            state._fsp--;

            dbg.location(46,14);
            // C:\\Users\\Swaneet\\github\\haw\\CI\\A1\\MiniP_2.g:46:14: ( SEMICOL ( statements )* )?
            int alt11=2;
            try { dbg.enterSubRule(11);
            try { dbg.enterDecision(11, decisionCanBacktrack[11]);

            int LA11_0 = input.LA(1);

            if ( (LA11_0==SEMICOL) ) {
                alt11=1;
            }
            } finally {dbg.exitDecision(11);}

            switch (alt11) {
                case 1 :
                    dbg.enterAlt(1);
